WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
320151
[JSC] `JSModuleRecord` should not retain the parser's `VariableEnvironments`
https://bugs.webkit.org/show_bug.cgi?id=320151
Summary
[JSC] `JSModuleRecord` should not retain the parser's `VariableEnvironments`
Sosuke Suzuki
Reported
2026-07-23 20:10:52 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Sosuke Suzuki
Comment 1
2026-07-23 20:12:01 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/70084
EWS
Comment 2
2026-07-25 21:04:56 PDT
Committed
317931@main
(9cbcbb990559): <
https://commits.webkit.org/317931@main
> Reviewed commits have been landed. Closing PR #70084 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-07-25 21:05:12 PDT
<
rdar://problem/183236808
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug